tests/ui/attr-value-does-not-match-size.rs
use bilge::prelude::*;

#[bitsize(18)]
struct Wrong {
    field1: u6,
    field2: u13,
}

fn main() {}
